[package]
name = "transaction-buffer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
tokio = { version = "1", features = ["full"] }
transaction-consumer = { git = "https://github.com/broxus/transaction-consumer", branch = "update" }
anyhow = "1.0.38"
chrono = { version = "*" }
log = { version = "0.4", features = ["std", "serde"] }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
futures = { version = "0.3" }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "uuid", "offline", "chrono", "json"] }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
ton_abi = { git = "https://github.com/broxus/ton-labs-abi.git" }
weedb = "0.1.1"
fdlimit = "0.2.1"
rlimit = "0.9.1"

[dev-dependencies]
env_logger = "0.10.0"
env-file-reader = "0.3.0"

